integration_tests/codegen_fail/fail/union/struct_same_type_pretty.stderr
warning: field is never read: `enum_path`
   --> $DIR/mod.rs:282:5
    |
282 |     pub enum_path: Option<TokenStream>,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field is never read: `span`
   --> $DIR/mod.rs:296:5
    |
296 |     pub span: Span,
    |     ^^^^^^^^^^^^^^

warning: 2 warnings emitted

error: duplicated attribute argument found
 --> $DIR/struct_same_type_pretty.rs:5:14
  |
5 | #[graphql(on i32 = Character::b)]
  |              ^^^
